--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "is-url-external": "^1.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
+    "react-router-transition": "^1.3.0",
     "react-scripts": "2.1.8",
+    "react-transition-group": "^2.6.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
