--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "personal-website",
   "version": "0.1.0",
+  "homepage": "https://florentin.design",
   "private": true,
   "dependencies": {
     "is-url-external": "^1.0.3",
@@ -9,9 +10,7 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "react-router-transition": "^1.3.0",
     "react-scripts": "2.1.8",
-    "react-transition-group": "^2.6.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
