--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-piwik": "^1.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-tilty": "^1.2.1",
     "styled-components": "^4.1.3"
   },
   "scripts": {
