--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-helmet": "^5.2.0",
     "react-piwik": "^1.6.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.0.0",
     "react-tilty": "^1.2.1",
     "styled-components": "^4.1.3"
   },
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "now-build": "npm run build && mv build dist"
   },
   "eslintConfig": {
     "extends": "react-app"
