--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,25 @@
 {
-  "short_name": "Florentin",
   "name": "Florentin | Freelance Graphic Designer",
+  "short_name": "Florentin",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "static/imgs/meta/icons/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "static/imgs/meta/icons/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
-  "display": "standalone",
   "theme_color": "#111111",
-  "background_color": "#ffffff"
+  "background_color": "#111111",
+  "display": "standalone"
 }
