--- a/public/meta/icons/manifest.json
+++ b/public/meta/icons/manifest.json
@@ -3,23 +3,23 @@
   "short_name": "Florentin",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "meta/icons/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "static/imgs/meta/icons/android-chrome-192x192.png",
+      "src": "meta/icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "static/imgs/meta/icons/android-chrome-512x512.png",
+      "src": "meta/icons/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "start_url": ".",
-  "theme_color": "#111111",
-  "background_color": "#111111",
+  "theme_color": "#eeeeee",
+  "background_color": "#eeeeee",
   "display": "standalone"
 }
