--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "short_name": "Florentin",
   "icons": [
     {
-      "src": "meta/icons/favicon.ico",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "meta/icons/android-chrome-192x192.png",
+      "src": "android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "meta/icons/android-chrome-512x512.png",
+      "src": "android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
