--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "dependencies": {
     "is-url-external": "^1.0.3",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0",
-    "react-piwik": "^1.6.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^5.2.1",
+    "react-piwik": "^1.8.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.0",
-    "react-tilty": "^1.2.1",
-    "styled-components": "^4.1.3"
+    "react-scripts": "^3.4.1",
+    "react-tilty": "^1.3.3",
+    "react-transition-group": "^4.3.0",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
