--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "personal-website",
   "version": "0.1.0",
-  "homepage": "https://florentin.design",
   "private": true,
   "dependencies": {
     "is-url-external": "^1.0.3",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "react-piwik": "^1.8.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
-    "react-tilty": "^1.3.3",
-    "react-transition-group": "^4.3.0",
-    "styled-components": "^4.4.1"
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-piwik": "^1.12.0",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0",
+    "react-tilty": "^2.0.3",
+    "react-transition-group": "^4.4.2",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "now-build": "npm run build && mv build dist"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
